Se mejoró el README.md, se agregó la carpeta netbeans y se actualizaron los cambios de la base de datos